# minecraft-quic-proxy

./: Cargo.toml
.github/workflows/: main.yml
client-mod/: .gitignore  build.gradle  gradle.properties
client-mod/src/main/java/me/caelunshun/quicproxy/: ConnectScreenExt.java  ConnectionExt.java  QUICProxy.java  ServerAddressExt.java
client-mod/src/main/java/me/caelunshun/quicproxy/client/: ConnectionType.java  QUICProxyClient.java
client-mod/src/main/java/me/caelunshun/quicproxy/jni/: RustLoader.java  RustQuicClient.java  RustQuicContext.java
client-mod/src/main/java/me/caelunshun/quicproxy/mixin/: ConnectScreenConnectorMixin.java  ConnectScreenMixin.java  ConnectionMixin.java  ServerAddressMixin.java
client-mod/src/main/resources/: fabric.mod.json  quic-proxy.mixins.json
jni/: Cargo.toml
jni/src/: lib.rs
macros/: Cargo.toml
macros/src/: from_variants.rs  lib.rs  protocol.rs
src/: client.rs  control_stream.rs  entity_id.rs  gateway.rs  io_duplex.rs  lib.rs  main.rs  packet_translation.rs  position.rs  protocol.rs  proxy.rs  sequence.rs  stream.rs  stream_allocation.rs  stream_priority.rs
src/protocol/: decoder.rs  encoder.rs  optimized_codec.rs  packet.rs  vanilla_codec.rs
src/protocol/packet/client/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
src/protocol/packet/server/: configuration.rs  login.rs  play.rs  status.rs
