workspace = { members = [".", "macros"] }

[package]
name = "minecraft-quic-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
ahash = "0.8"
anyhow = "1"
bincode = "1"
bitflags = "2"
bytemuck = "1"
bytes = "1"
cfb8 = "0.8"
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
flume = "0.11"
fs-err = "2"
futures = "0.3"
minecraft-quic-proxy-macros = { path = "macros" }
mini-moka = { version = "0.10", default-features = false }
once_cell = "1"
pin-project = "1"
quinn = { version = "0.10", default-features = false, features = ["tls-rustls", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
zstd = { version = "0.13", features = ["experimental"] }
