workspace = { members = [".", "macros", "jni"] }

[package]
name = "minecraft-quic-proxy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/caelunshun/minecraft-quic-proxy"

[dependencies]
aes = "0.8"
ahash = "0.8"
anyhow = "1"
argon2 = "0.5"
bincode = "1"
bitflags = "2"
bytemuck = "1"
bytes = "1"
cfb8 = "0.8"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
flume = "0.11"
fs-err = "2"
futures = "0.3"
minecraft-quic-proxy-macros = { path = "macros" }
mini-moka = "0.10"
once_cell = "1"
pin-project = "1"
quinn = { version = "0.10", default-features = false, features = ["tls-rustls", "runtime-tokio", "log"] }
rcgen = "0.12"
rustls = "0.21"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = { version = "0.13", features = ["experimental"] }

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
