[package]
name = "minecraft-quic-proxy-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
minecraft-quic-proxy = { path = ".." }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
