[package]
name = "minecraft-quic-proxy-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
jni = "0.21"
minecraft-quic-proxy = { path = ".." }
rustls = "0.21"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
quinn = { version = "0.10", default-features = false, features = ["native-certs"] }

[features]
ignore-server-certificates = ["rustls/dangerous_configuration"]
